Updates for sync and async generation